fix: align teacher info in footer

--- a/css/style.css
+++ b/css/style.css
@@ -558,9 +558,9 @@ a:hover {
     text-decoration: underline;
 }
 
-.footer-social a {
-    font-size: 1.5rem;
-    margin-right: 1rem;
+.footer-social {
+    display: flex;
+    flex-direction: column;
 }
 
 .footer-bottom {
